crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/storage_layout_base_slot/out_of_range/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

Error: This syntax was introduced in version '0.8.29'.
   ╭─[input.sol:5:12]
   │
 5 │ contract C layout at 2 ** 256 {}
   │            ─────────┬────────  
   │                     ╰────────── Error occurred here.
───╯

Error: The base slot of the storage layout evaluates to 115792089237316195423570985008687907853269984665640564039457584007913129639936, which is outside the range of type uint256.
   ╭─[input.sol:5:22]
   │
 5 │ contract C layout at 2 ** 256 {}
   │                      ────┬───  
   │                          ╰───── Error occurred here.
───╯
